<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/user_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.UserLogin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        app:title="@string/login"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageview_welcome_page"
            android:layout_width="174dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/wise_logo_1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="-2dp"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StatsTitles"
                        android:layout_width="87dp"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/username"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="298dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textAlignment="textStart" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StatsTitles"
                        android:layout_width="88dp"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/password"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="294dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textAlignment="textStart" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textview_error"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/wrongAnswerRed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_submit"
                        android:layout_width="200dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login_button" />

                    <!--<Button-->
                    <!--android:id="@+id/button_register"-->
                    <!--android:layout_width="190dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/register_button" />-->

                </LinearLayout>

                <TextView
                    android:id="@+id/or_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or_1"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="90dp"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="130dp"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/continue_as_guest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_as_guest"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="100dp"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <!--<Button-->
                <!--android:id="@+id/continue_as_guest"-->
                <!--android:layout_width="200dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_marginLeft="90dp"-->
                <!--android:layout_marginTop="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/continue_as_guest" />-->

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
