<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/select_difficulty_level"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.SelectDifficultyLevel"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        app:title="@string/set_difficulty_level"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="fill_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/select_topic" />

            <Spinner
                android:id="@+id/topics_dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="-20dp"
                android:prompt="@string/difficulty_level_prompt">
            </Spinner>

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="" />

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/select_difficulty_level" />

            <Spinner
                android:id="@+id/difficulty_levels_dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:prompt="@string/difficulty_level_prompt">
            </Spinner>

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="" />

            <ImageView
                android:id="@+id/imageview_welcome_page"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:src="@drawable/levels"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="" />

            <Button
                android:id="@+id/button_select_difficulty_level"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:text="@string/submit_terrain_button" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
